--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">Zoodle</string>
     <string name="add_new_mood_button">Add New Mood Button</string>
-    <string name="welcome_text">How are you today?</string>
+    <string name="welcome_text">How are you?</string>
     <string name="calendar_button_description">Click to see Calendar box</string>
     <string name="click_button_text">Click here to add a new entry</string>
     <string name="click_to_login">Click to login ***PREMIUM ONLY***</string>
     <string name="login_content_description">Login icon to click to establish online connectivity</string>
     <string name="return_to_main">Return</string>
+    <string name="confirm_change">Confirm</string>
 </resources>
