--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,12 @@
     <string name="confirm_change">Confirm</string>
     <string name="remove">Remove</string>
     <string name="add">Add</string>
-    <string name="default_date">2022-03-04</string>
+    <string name="default_date">2022–03–04</string>
     <string name="default_time">12:01</string>
     <string name="default_mood">5</string>
+    <string name="activities_choose">Choose your activity…</string>
+    <string name="activities_selected">Selected</string>
+    <string name="activities_available">Available</string>
 
     <string-array name="available_activities">
         <item>Guitar</item>
