Activities are read in via json and provided to ActivitiesActivity to display in the RecycleView there

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="activities_choose">Choose your activity…</string>
     <string name="activities_selected">Selected</string>
     <string name="activities_available">Available</string>
+    <string name="activities_name">Activity</string>
+    <string name="activities_delete">Press to delete</string>
+    <string name="activities_cross">X</string>
 
     <string-array name="available_activities">
         <item>Guitar</item>
