--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="confirm_change">Confirm</string>
     <string name="remove">Remove</string>
     <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
     <string name="default_date">2022–03–04</string>
     <string name="default_time">12:01</string>
     <string name="default_mood">5</string>
@@ -22,6 +23,7 @@
     <string name="activities_cross">X</string>
     <string name="activities_add_new">Click here to add a new activity</string>
     <string name="activities_add_new_description">Clickable button to add new activity</string>
+    <string name="activities_add_new_activity_name">New activity</string>
 
     <string-array name="available_activities">
         <item>Guitar</item>
