--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,25 @@
 <resources>
     <string name="app_name">Zoodle</string>
     <string name="add_new_mood_description">Add New Mood Button</string>
+
     <string name="welcome_text">How are you?</string>
+    <string name="main_settings">Settings button</string>
     <string name="main_view_trend">View trend</string>
     <string name="calendar_button_description">Click to see Calendar box</string>
     <string name="click_button_text">Click here to add a new entry</string>
     <string name="click_to_login">Click to login ***PREMIUM ONLY***</string>
     <string name="login_content_description">Login icon to click to establish online connectivity</string>
     <string name="return_to_main">Return</string>
+
     <string name="confirm_change">Confirm</string>
     <string name="remove">Remove</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+
     <string name="default_date">2022–03–04</string>
     <string name="default_time">12:01</string>
     <string name="default_mood">5</string>
+
     <string name="activities_choose">Choose your activity…</string>
     <string name="activities_selected">Selected</string>
     <string name="activities_available">Available</string>
@@ -25,6 +30,9 @@
     <string name="activities_add_new_description">Clickable button to add new activity</string>
     <string name="activities_add_new_activity_name">New activity</string>
     <string name="activities_enable_delete">Delete Activity</string>
+    <string name="activities_add_new_activity_name_hint">Enter in a new activity name of your choosing</string>
+
+    <string name="settings_title">Settings</string>
 
     <string-array name="available_activities">
         <item>Guitar</item>
