Mood unicode emoji support further added. Trend view accepts it. As does the main recycle view. It's not a great implementation. Error on changing mood value from numberpicker - not updated yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,12 @@
 
     <string name="settings_title">Settings</string>
 
+    <string name="mood_ecstatic">&#128513;</string>
+    <string name="mood_happy">&#128512;</string>
+    <string name="mood_average">&#128528;</string>
+    <string name="mood_unhappy">&#128577;</string>
+    <string name="mood_terrible">&#128557;</string>
+
     <string-array name="available_activities">
         <item>Guitar</item>
         <item>Programming</item>
