--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,8 @@
     <string name="activities_restore_defaults">Restore defaults</string>
 
     <string name="settings_title">Settings</string>
-    <string name="settings_mood_display">Mood Visuals</string>
+    <string name="settings_mood_display">Mood Options</string>
+    <string name="settings_mood_use_numerals">Use Numerals</string>
 
     <string-array name="mood_faces">
         <item>&#128557;</item> // terrible
