--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
 
     <string name="settings_title">Settings</string>
     <string name="settings_mood_display">Mood Options</string>
-    <string name="settings_mood_use_numerals">Use Numerals</string>
+    <string name="settings_mood_use_numerals">Use Numbers for Mood</string>
 
     <string-array name="mood_faces">
         <item>&#128557;</item> // terrible
