--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,18 @@
     <string name="login_content_description">Login icon to click to establish online connectivity</string>
     <string name="return_to_main">Return</string>
 
+    <string name="mood_picker_date_title">Date</string>
+    <string name="mood_picker_date_value">2022–11–06</string>
+    <string name="mood_picker_time_title">Time</string>
+    <string name="mood_picker_time_value">08:30</string>
+    <string name="mood_picker_mood_title">Mood</string>
+    <string name="mood_picker_mood_value">3</string>
+
     <string name="confirm_change">Confirm</string>
     <string name="remove">Remove</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+    <string name="create">Create</string>
 
     <string name="default_date">2022–03–04</string>
     <string name="default_time">12:01</string>
